--- a/slides/02-basic_text_wrangling_functions.qmd
+++ b/slides/02-basic_text_wrangling_functions.qmd
@@ -1,5 +1,5 @@
 ---
-title: Basic R functions
+title: Basic R functions for text wrangling
 author: Hauke Licht
 institute: University of Cologne
 date: last-modified
